# bflang-to-brainfuck-compilers

./: README.md
bflang/: bf.cpp  bf.h  bf.lpp  bf.ypp  print.h
bflang-2018/: .gitignore  CMakeLists.txt  README.md  interpreter.cpp  interpreter.h  main.cpp
bflang-2018/examples/: compile_and_run_examples.sh  functions.bl  io.bl  member-test.bl  multiple_files_compiled.bl  recursion.bl  scopes.bl  ttt.bl
bflang-2018/examples/dst/: functions.bl.b  member_functions.bl.b
bflang-2020/: .gitignore  CMakeLists.txt  CompilerException.cpp  CompilerException.h  Location.h  bfa.cpp  bfc.cpp  bfi.cpp  brainfuck.h  util.cpp  util.h
bflang-2020/assembly/: assembly.h
bflang-2020/bflang/: AliasSymbol.cpp  AliasSymbol.h  ClassSymbol.cpp  ClassSymbol.h  Compiler.cpp  Compiler.h  Environment.cpp  Environment.h  FunctionSymbol.cpp  FunctionSymbol.h  Symbol.cpp  Symbol.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  Type.cpp  Type.h  VariableSymbol.cpp  VariableSymbol.h  forward.h
bflang-2020/examples/basm/: add.basm  functional.basm  intermed.basm  pointer.basm  prog.basm  relativeJump.basm  test.basm
bflang-2020/examples/bl/: alias.bl  asm.bl  auto-lambda.bl  basic-declarations.bl  bflang.bl  break-continue.bl  c_str.bl  characters.bl  comment.bl  compound-return.bl  const-integer-expressions.bl  constexpr-template-parameter.bl  constexpr.bl  constructors.bl  default-template.bl  destructors.bl  do.bl  enum.bl  fib.bl  function-pointer.bl  functionQualifiersAndModifiers.bl  get-set.bl  io.bl  lib-import.bl  lib.bl  main.bl  native-type.bl  operatorOverload.bl  overload.bl  override-abstract.bl  partial-instantiation.bl  precedence.bl  raw.bl  statement-labels.bl  static-member-variable.bl  struct.bl  structType.bl  template.bl  this.bl  tree.bl  (+3 more)
bflang-2020/grammars/: BrainfuckLang.g4  BrainfuckLangAssembly.g4  Preprocessor.g4
bflang/examples/: characters.bl  logic.bl  math.bl  member_functions.bl  ttt.bl.b  types.bl
bflang/examples/dst/: characters.bl.b  io.bl.b  multiple_files_compiled.b  recursion.bl.b  scopes.bl.b  types.bl.b
interpreter/src/: Main.java  cat.bf  cellSize.bf  hanoi.bf  helloWorld.bf
interpreter/src/brainfuck/: Compiler.java  Interpreter.java  InterpreterIO.java  JumpTable.java  Memory.java  MemoryMode.java  Optimizer.java  StdIO.java
interpreter/src/brainfuck/program/: DebugMode.java  Instruction.java  InstructionTest.java  JumpLabel.java  Method.java  Program.java  SymbolTable.java  Type.java  Util.java  Variable.java
